# gateway

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  gateway.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  issue.yml
.github/workflows/: ci.yml
src/: classify.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  schema.rs  stream.rs  translate.rs
tests/: integration.rs
