[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
description = "A tiny Rust gateway for running coding agents across model providers safely"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bytes = "1"
futures-util = "0.3"
async-stream = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
